feat: Add all yearly rainfall data

--- a/index.html
+++ b/index.html
@@ -74,25 +74,25 @@
                             <div style="color: #ffffff;">
                                 <span style="color: #87A6CA; font-size: 20px; font-weight: bold;" ><i class="fa fa-tint" aria-hidden="true"></i>降雨圖資</span>
                                 <div class="form-switch form-check ms-2">
-                                    <label for="site_state" class="form-check-label">降雨測站</label>
-                                    <input type="checkbox" class="form-check-input" id="irrigation"  v-model= "rainStationChecked">
+                                    <label for="rainStation" class="form-check-label">降雨測站</label>
+                                    <input type="checkbox" class="form-check-input" id="rainStation"  v-model= "rainStationChecked">
                                 </div>
                                 <div class="form-switch form-check ms-2">
-                                    <label for="site_state" class="form-check-label">集水區</label>
-                                    <input type="checkbox" class="form-check-input" id="irrigation"  v-model= "watershedChecked">
+                                    <label for="watershed" class="form-check-label">集水區</label>
+                                    <input type="checkbox" class="form-check-input" id="watershed"  v-model= "watershedChecked">
                                 </div>
                                 <div class="form-switch form-check ms-2">
-                                    <label for="site_state" class="form-check-label">河川</label>
+                                    <label for="river" class="form-check-label">河川</label>
                                     <input type="checkbox" class="form-check-input" id="river" v-model= "riverChecked">
                                 </div>
                                 <br>
                                 <span style="color: #87A6CA; font-size: 20px; font-weight: bold;" ><i class="fa fa-tint" aria-hidden="true"></i>灌溉渠道</span>
                                 <div class="form-switch form-check ms-2">
-                                    <label for="site_state" class="form-check-label">農業灌溉渠道</label>
+                                    <label for="irrigation" class="form-check-label">農業灌溉渠道</label>
                                     <input type="checkbox" class="form-check-input" id="irrigation"  v-model= "irrigationChecked">
                                 </div>
                                 <div class="form-switch form-check ms-2">
-                                    <label for="site_state" class="form-check-label">灌溉輪區</label>
+                                    <label for="parcel" class="form-check-label">灌溉輪區</label>
                                     <input type="checkbox" class="form-check-input" id="parcel" v-model="paddiesChecked">
                                 </div>
                             </div>
