--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <meta name="author" content="" />
         <title>稻田捕手</title>
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link rel="stylesheet" href="/css/home.css"> 
+        <link rel="stylesheet" href="./css/home.css"> 
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <!---ChartJS-->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
+
     </head>
     <body id="page-top">
         <div id="homepage">
@@ -46,7 +50,7 @@
                                     <div style="display: inline;">
                                         <label style="color: white; font-size:18px">選擇管理單位</label>
                                         <div class="select">
-                                            <select class="slct-area" name="water" v-model= "wateradmin" @change="showAcc">
+                                            <select class="slct-area" name="water" v-model= "wateradmin">
                                                 <option v-for="option in options" :value="option">{{option.name}}</option> 
                                             </select>                   
                                         </div>
@@ -55,15 +59,19 @@
                                             <p style="font-size:22px; font-weight:1000;">預估供水量:</p>
                                             <p>烏山頭水庫集水區降雨量估計:{{ wateradmin.acc }}</p>
                                             <p style="font-size:22px; font-weight:1000;">預估需水量:</p>
-                                            <p>嘉南水利處:</p>
+                                            <p>嘉南水利處灌區所需水量: {{ wateradmin.required }} </p>
                                             <div style="height: 50px;"></div>
-                                            <p style="font-size:26px; font-weight:1000;">目前預估水情  <strong style="color:#4785c8; font-size: 30px;">足夠</strong></p>
+                                            <p style="font-size:26px; font-weight:1000;">目前預估水情  
+                                                <span style="color:#4785c8; font-size: 30px; font-weight: bold;" v-if="wateradmin.acc > wateradmin.required">水量充足</span>
+                                                <span style="color:#c8479d; font-size: 30px; font-weight: bold;" v-else>水量不足</span>
+                                            </p>
                                         </div>
                                     </div> 
                                 </div>
                                 <div class="col-md-2-2">
-                                    <svg width='500' height='600' style='border:5px solid #1f206f60;'>
-                                    </svg>
+                                    <div style="padding:10px ;">
+                                        <svg width='350' height='500' style='border:5px solid #1f206f60;'></svg>
+                                    </div>                                    
                                 </div>
                             </div>
                             <div style="text-align: center;">                                
@@ -72,7 +80,11 @@
                                 <hr style="color: aliceblue; top:20px; padding: 5px;"></hr>
                             </div>                                   
                         </div>
-                        <div style="height: 150px;"></div>
+                        <div>
+                            <div style="height: 50px;"></div>
+                            <div id="requiredWater-container"></div>
+                        </div>
+                        <div style="height: 100px;"></div>
                         <div style=" text-align: justify; text-justify: inter-word;">
                             <h2 style="font-weight:bold; color:#ffff">各水庫水情比較</h2>
                             <br>   
@@ -243,7 +255,9 @@
         </div>
     </body>      
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://d3js.org/d3.v7.min.js"></script>
