--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
         <title>稻田捕手</title>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" href="./css/home.css"> 
+        <link rel="stylesheet" href="./css/hightchart.css"> 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <!---ChartJS-->
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
-
+        <!--script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script--->
+        <!---HighCharts-->
+        <script src="https://code.highcharts.com/highcharts.js"></script>
+        <script src="https://code.highcharts.com/modules/series-label.js"></script>
+        <script src="https://code.highcharts.com/modules/exporting.js"></script>
+        <script src="https://code.highcharts.com/modules/export-data.js"></script>
+        <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     </head>
     <body id="page-top">
         <div id="homepage">
@@ -19,7 +25,7 @@
             <header style="background-color: #6290C1">
                 <div class="container px-4 text-center">
                     <h1 style="font-size:1.5rem; color:#ffff">Flow to Paddies</h1>
-                    <p style="font-size:3.5rem; font-weight:bold; color:#ffff">稻田灌溉資訊平台</p>
+                    <p style="font-size:3.5rem; font-weight:bold; color:#ffff">水稻渠成</p>
                 </div>
             </header>
             <!-- Navigation-->
@@ -30,7 +36,7 @@
                         <ul class="navbar-nav">
                             <li style="padding-left: 70px; padding-right: 60px;font-size: 1.2rem;" class="nav-item"><a class="nav-link" href="#accumwater">目前水情資訊</a></li>
                             <li style="padding-left: 70px; padding-right: 60px;font-size: 1.2rem;" class="nav-item"><a class="nav-link" href="map.html" target="_blank">稻作灌溉資訊地圖</a></li>
-                            <li style="padding-left: 70px; padding-right: 60px;font-size: 1.2rem;" class="nav-item"><a class="nav-link" href="#">稻作灌溉資訊</a></li>
+                            <li style="padding-left: 70px; padding-right: 60px;font-size: 1.2rem;" class="nav-item"><a class="nav-link" href="#information">稻作灌溉資訊</a></li>
                             <li style="padding-left: 70px; padding-right: 60px;font-size: 1.2rem;" class="nav-item"><a class="nav-link" href="#">灌溉新聞</a></li>
                             <li style="padding-left: 70px; padding-right: 60px;font-size: 1.2rem;" class="nav-item"><a class="nav-link" href="#replyform">意見回報</a></li>
                         </ul>
@@ -57,9 +63,9 @@
                                         <div id="selected-info" style="padding-top:15px; font-size:20px; color:#ffff">
                                             <h3>您所選擇的灌區為: {{ wateradmin.name }}</h3>
                                             <p style="font-size:22px; font-weight:1000;">預估供水量:</p>
-                                            <p>烏山頭水庫集水區降雨量估計:{{ wateradmin.acc }}</p>
+                                            <p>水庫集水區降雨量估計:{{ wateradmin.acc }}</p>
                                             <p style="font-size:22px; font-weight:1000;">預估需水量:</p>
-                                            <p>嘉南水利處灌區所需水量: {{ wateradmin.required }} </p>
+                                            <p>灌區所需水量: {{ wateradmin.required }} </p>
                                             <div style="height: 50px;"></div>
                                             <p style="font-size:26px; font-weight:1000;">目前預估水情  
                                                 <span style="color:#4785c8; font-size: 30px; font-weight: bold;" v-if="wateradmin.acc > wateradmin.required">水量充足</span>
@@ -82,16 +88,21 @@
                         </div>
                         <div>
                             <div style="height: 50px;"></div>
-                            <div id="requiredWater-container"></div>
+                            <!--div id="requiredWater-container" style="width: 600px;height:400px;"></div-->
+                            
+                            <figure class="highcharts-figure">
+                                <div id="container"></div>
+                            </figure>
+
                         </div>
                         <div style="height: 100px;"></div>
                         <div style=" text-align: justify; text-justify: inter-word;">
                             <h2 style="font-weight:bold; color:#ffff">各水庫水情比較</h2>
                             <br>   
-                            <div class="row">
+                            <div class="row"  style="font-size: 20px; color: rgb(56, 141, 206); font-weight: 600;">
                                 <div class="col-md-1-3">
                                     <div style="text-align: center;">
-                                        <p>石門水庫</p>
+                                        <h3><b>石門水庫</b></h3>
                                         <svg height="200" width="200"> 
                                             <g transform="translate(100,100)">
                                               <g>
@@ -107,11 +118,13 @@
                                               <text x="-60" y="10" font-family="Verdana" font-size="35" fill="white">96.34%</text>
                                             </g>
                                         </svg>
+                                        <p>有效蓄水量</p>
+                                        <p>立方公尺</p>
                                     </div>
                                 </div>
                                 <div class="col-md-1-3">
                                     <div style="text-align: center;">
-                                        <p>翡翠水庫</p>
+                                        <h3><b>翡翠水庫</b></h3>
                                         <svg height="200" width="200"> 
                                             <g transform="translate(100,100)">
                                               <g>
@@ -127,11 +140,13 @@
                                               <text x="-60" y="10" font-family="Verdana" font-size="35" fill="white">89.08%</text>
                                             </g>
                                         </svg>
+                                        <p>有效蓄水量</p>
+                                        <p>立方公尺</p>
                                     </div>
                                 </div>
                                 <div class="col-md-1-3">
                                     <div style="text-align: center;">
-                                        <p>寶山第二水庫</p>
+                                        <h3><b>寶山第二水庫</b></h3>
                                         <svg height="200" width="200"> 
                                             <g transform="translate(100,100)">
                                               <g>
@@ -147,12 +162,14 @@
                                               <text x="-50" y="10" font-family="Verdana" font-size="35" fill="white">100%</text>
                                             </g>
                                         </svg>
+                                        <p>有效蓄水量</p>
+                                        <p>立方公尺</p>
                                     </div>
                                 </div>
                                 <div style="height: 50px;"></div>
                                 <div class="col-md-1-3">
                                     <div style="text-align: center;">
-                                        <p>德基水庫</p>
+                                        <h3><b>德基水庫</b></h3>
                                         <svg height="200" width="200"> 
                                             <g transform="translate(100,100)">
                                               <g>
@@ -168,11 +185,13 @@
                                               <text x="-60" y="10" font-family="Verdana" font-size="35" fill="white">89.96%</text>
                                             </g>
                                         </svg>
+                                        <p>有效蓄水量</p>
+                                        <p>立方公尺</p>
                                     </div>
                                 </div>
                                 <div class="col-md-1-3">
                                     <div style="text-align: center;">
-                                        <p>烏山頭水庫</p>
+                                        <h3><b>烏山頭水庫</b></h3>
                                         <svg height="200" width="200"> 
                                             <g transform="translate(100,100)">
                                               <g>
@@ -188,11 +207,13 @@
                                               <text x="-60" y="40" font-family="Verdana" font-size="35" fill="white">58.22%</text>
                                             </g>
                                         </svg>
+                                        <p>有效蓄水量</p>
+                                        <p>立方公尺</p>
                                     </div>
                                 </div>
                                 <div class="col-md-1-3">
                                     <div style="text-align: center;">
-                                        <p>曾文水庫</p>
+                                        <h3><b>曾文水庫</b></h3>
                                         <svg height="200" width="200"> 
                                             <g transform="translate(100,100)">
                                               <g>
@@ -208,17 +229,75 @@
                                               <text x="-60" y="40" font-family="Verdana" font-size="35" fill="#046CDB">28.5 %</text>
                                             </g>
                                         </svg>
+                                        <p>有效蓄水量</p>
+                                        <p>立方公尺</p>
                                     </div>
                                 </div>
-                            </div>                
+                            </div>
+                            <div style="text-align: center;">                                
+                                <div style="height: 50px;"></div>
+                                <a class="btn btn-primary btn-lg" href="#">查看所有水庫</a>
+                            </div>                   
                         </div>
                     </div>
                 </div>
             </section>
 
+            <!---Information Section-->
+            <section id="information" style="background-color:#dbdbdb;">
+                <div class="container px-4">
+                    <h1 style="text-align:center; color: black;">想了解...</h1>
+                    <br>
+                    <div class="row"  style="font-size: 20px;">
+                        <div class="col-md-1-3">
+                            <div style="text-align: center;">
+                                <svg height="200" width="200" style="background-color:rgb(255, 255, 255); border-radius:8px;"></svg>
+                                <div style="height: 50px;"></div>
+                                <h3><b>灌溉計畫</b></h3>
+                                <p>供水量計算</p>
+                                <p>需水量計算</p>
+                                <p>輪灌機制</p>
+                            </div>
+                        </div>
+                        <div class="col-md-1-3">
+                            <div style="text-align: center;">
+                                <svg height="200" width="200" style="background-color:rgb(255, 255, 255); border-radius:8px;"></svg>
+                                <div style="height: 50px;"></div>
+                                <h3><b>輪灌作業</b></h3>
+                                <p>輪灌地圖</p>
+                                <p>輪灌期程</p>
+                                <p>相關公告</p>
+                            </div>
+                        </div>
+                        <div class="col-md-1-3">
+                            <div style="text-align: center;">
+                                <svg height="200" width="200" style="background-color:rgb(255, 255, 255); border-radius:8px;"></svg>
+                                <div style="height: 50px;"></div>
+                                <h3><b>停灌專區</b></h3>
+                                <p>停灌作業</p>
+                                <p>停灌補助申請</p>
+                                <p>申請進度</p>
+                            </div>
+                        </div>
+                        <div class="col-md-1-3">
+                            <div style="text-align: center;">
+                                <svg height="200" width="200" style="background-color:rgb(255, 255, 255); border-radius:8px;"></svg>
+                                <div style="height: 50px;"></div>
+                                <h3><b>相關新聞</b></h3>
+                            </div>
+                        </div>
+                        <div class="col-md-1-3">
+                            <div style="text-align: center;">
+                                <svg height="200" width="200" style="background-color:rgb(255, 255, 255); border-radius:8px;"></svg>
+                                <div style="height: 50px;"></div>
+                                <h3><b>意見回報</b></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- Form Section-->
-
-            <section id="replyform" style="background-color:#ced3da;">
+            <section id="replyform" style="background-color:#dbdbdb;">
                 <div class="container px-4">
                     <h2>意見回報</h2>
                     <form>
@@ -234,23 +313,37 @@
                             <label for="exampleInputName1" class="form-label">您的姓氏大名</label>
                             <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp">
                           </div>
-                        <div class="mb-3 form-check">
-                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                          <label class="form-check-label" for="exampleCheck1">我願意收到回覆訊息</label>
-                          <br>
-                          <input type="checkbox" class="form-check-input" id="exampleCheck2">
-                          <label class="form-check-label" for="exampleCheck2">我願意訂閱以獲得最新資訊</label>
-                        </div>
+
                         <button type="submit" class="btn btn-primary" href="index.html">提交意見</button>
                     </form>
                 </div>
             </section>
+
             <!-- Footer-->
-            <footer class="py-5 bg-dark">
+            <footer style="padding-top:50px; height:300px; background-color:#838383; color: rgb(239, 243, 247);">
                 <div class="container px-4">
-                    <p class="m-0 text-center text-white">Acknowledgements: 經濟部水利署、行政院農業委員會農田水利署</p>
-                    <p class="m-0 text-center text-white">Editor: 徐若堯、許予瑄、朱丹玥、李信誼、蔡孟秦 </p>                           
-                </div>
+                    <div class="col-md-2-2" style="height: 150px; padding-left: 50px;">
+                        <h3>如何獲取最新資訊</h3>
+                        <p>您的信箱:
+                            <input type="email">
+                        </p>
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">我願意收到回覆訊息</label>
+                        <br>
+                        <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                        <label class="form-check-label" for="exampleCheck2">我願意訂閱以獲得最新資訊</label>
+                    </div>
+                    <div class="col-md-2-2" style="height: 150px;">
+                        <div style="display:flex; float: right; height: 100px; width:350px; background-color: #bcbcbc;"></div>
+                    </div>
+                </div>     
+                <div class="container px-4">
+                    <hr style="color: aliceblue; top:20px; padding: 1px;"></hr>
+                    <div style="align-items: center; text-align: center;">
+                        <p class="m-0 text-center text-white">Acknowledgements: 經濟部水利署、行政院農業委員會農田水利署</p>
+                        <p class="m-0 text-center text-white">Editor: 徐若堯、許予瑄、朱丹玥、李信誼、蔡孟秦 </p>  
+                    </div>
+                </div>      
             </footer>        
         </div>
     </body>      
