Update frontpage water demand/supply balance graph-final commit

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <!---ChartJS-->
         <!--script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script--->
+        
         <!---HighCharts-->
         <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/modules/series-label.js"></script>
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
         <script src="https://code.highcharts.com/modules/export-data.js"></script>
         <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
     </head>
     <body id="page-top">
         <div id="homepage">
@@ -100,10 +101,7 @@
                         <div>
                             <div style="height: 50px;"></div>
                             <!--div id="requiredWater-container" style="width: 600px;height:400px;"></div-->
-                            
-                            <figure class="highcharts-figure">
-                                <div id="container"></div>
-                            </figure>
+                            <div id="container" style="height: 500px; min-width: 310px"></div>
 
                         </div>
                         <div style="height: 100px;"></div>
