--- a/map.html
+++ b/map.html
@@ -100,7 +100,7 @@
                                 <input type="checkbox" class="form-check-input" id="parcelWeight" v-model="weightsChecked">
                             </div>   
                             <div class="form-switch form-check ms-2">
-                                <label for="irrigation" class="form-check-label">灌溉組別供需平衡</label>
+                                <label for="irrigation" class="form-check-label">灌溉組別需水量</label>
                                 <input type="checkbox" class="form-check-input" id="irrigationRot"  v-model= "RotChecked">
                             </div>    
                             <br>
